@@ -1,3 +1,8 @@
+Server changes
+
+TODO: on_request now receives options with [:want_reply]
+
+
 === 2.9.2-rc3
 
 * Remove advertised algorithms that were not working (curve25519-sha256@libssh.org) [mfazekas]
